# signal-extraction-project

./: .env-example  .gitignore  ASSIGNMENT.txt  README.md  SOFTWARE_PROJECT_GUIDELINES.md  pyproject.toml
config/: setup.json  test_setup.json
docs/: EXPERIMENT_PLAN.md  PLAN.md  PRD.md  PRD_ml_models.md  PRD_signal_generation.md  TODO.md
docs/adr/: ADR-001-noise-distribution.md  ADR-002-framework-pytorch.md  ADR-003-model-input-concatenation.md  ADR-004-loss-function-mse.md  ADR-005-sdk-architecture.md  ADR-006-one-hot-selector.md  ADR-007-fixed-window-size.md
notebooks/: analysis.ipynb
src/: main.py  run_experiments.py  visualize.py
src/signal_extraction/: __init__.py  constants.py
src/signal_extraction/experiments/: __init__.py  runner.py
src/signal_extraction/models/: base_model.py  fc_model.py  lstm_model.py  rnn_model.py
src/signal_extraction/sdk/: sdk.py
src/signal_extraction/services/: dataset_builder.py  evaluator.py  signal_generator.py  trainer.py
src/signal_extraction/shared/: config.py  schemas.py  version.py
src/signal_extraction/visualization/: plotter.py  signal_plots.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_dataset_builder.py  test_evaluator.py  test_fc_model.py  test_lstm_model.py  test_plotter.py  test_rnn_model.py  test_run_experiments.py  test_runner.py  test_sdk.py  test_signal_generator.py  test_signal_plots.py  test_trainer.py  test_visualize.py
